# CGAT

./: .gitattributes  .gitignore  .gitmodules  README.md
.github/workflows/: release-installers.yml
GPM2.0/: .gitattributes  .gitignore  README.md  README_zh.md
GPM2.0/.github/workflows/: release-installers.yml
GPM2.0/app/backend/: Cargo.toml  README.md
GPM2.0/app/backend/src/: alignment_cache.rs  auto_orientation.rs  auto_placement.rs  db.rs  degap_jobs.rs  exporter.rs  importer.rs  junction_inspection.rs  lib.rs  main.rs  main_view.rs  phased_assembly.rs  project_initializer.rs  reference_segments.rs  runtime_persistence.rs  workspace.rs
GPM2.0/app/frontend/: README.md  dev-bridge-paths.js  index.html  package-lock.json  package.json  vite.config.js
GPM2.0/app/frontend/src/: main.js
GPM2.0/app/src-tauri/: Cargo.toml  tauri.conf.json
GPM2.0/app/src-tauri/capabilities/: default.json
GPM2.0/app/src-tauri/src/: auto_pipeline_cancel.rs  commands.rs  import_cancel.rs  lib.rs  main.rs
GPM2.0/server/: export_final_path_fasta.sh  prepare.sh
GPM2.0/server/lib/: final_path.sh
GPM2.0/server/templates/: export_final_path_fasta.sh  package_full_zip.sh  package_light_no_fasta_zip.sh
GPM2.0/server/tools/: add_ctg_package.py  add_ctg_stage.py  add_dataset_package.py  blast6_to_paf.py  build_example2_package.py  build_example3_package.py
GPM2.0/tests/gpm_server/: add_ctg_test.sh  add_dataset_test.sh  blast6_to_paf_test.sh  prepare_metadata_test.sh
LIMS/: README.md
cgi-bin/: index.cgi  setting.cgi
docs/: _config.yml  index.html  index.md
(+128 files in other folders)
