[package]
name = "gpm_next_desktop"
version = "0.1.0"
edition = "2024"

[lib]
name = "gpm_next_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
gpm_next_backend = { path = "../backend" }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
